--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "notistack": "^3.0.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-redux": "^8.0.1",
